--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             La alimentación de la iguana va variando según su etapa de vida, pero la mayor parte de sus años son herbívoras. Viven en lugares tropicales con mucha vegetación y es un animal que puede ser domesticado.
         </p>
     </div>
-<div><img src="Assets/img/iguana-1.jpg" alt="iguana-1"></div>
+<div><img src="assets/img/iguana-1.jpg" alt="iguana-1"></div>
     </section>
     <section id="caracteristicas_iguana">
         <div id="caracteristicas_iguana2">
@@ -52,13 +52,13 @@
         <div id="fotos_iguana2"><table width="100%" border="0" cellpadding="2">
             <tr>
                 <td>
-            <img src="Assets/img/iguana-2.jpg" width="316px" height="202px" alt="iguana-2">
+            <img src="assets/img/iguana-2.jpg" width="316px" height="202px" alt="iguana-2">
         </td>
         <td>
-           <img src="Assets/img/iguana-3.jpg" width="316px" height="202px" alt="iguana-3">
+           <img src="assets/img/iguana-3.jpg" width="316px" height="202px" alt="iguana-3">
         </td>
            <td>
-           <img src="Assets/img/iguana-4.jpg" width="316px" height="202px" alt="iguana-4">
+           <img src="assets/img/iguana-4.jpg" width="316px" height="202px" alt="iguana-4">
         </td>
         </tr>   
         </table>
